service/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: replacement-svc
  namespace: application
spec:
  selector:
    app: replacement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
